# zed

./: AGENTS.md  Cargo.toml  MULTIPLE-AGENT-TABS.md  README.md  TODO_Ideas.md  a.diff  check_output.txt
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: jetbrains.json
assets/keymaps/macos/: jetbrains.json
assets/settings/: default.json
assets/themes/ayu/: ayu.json
assets/themes/gruvbox/: gruvbox.json
assets/themes/one/: one.json
crates/acp_thread/src/: acp_thread.rs  connection.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  db.rs  history_store.rs  thread.rs
crates/agent_servers/: Cargo.toml
crates/agent_servers/src/: acp.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_panel.rs  agent_panel.rs.orig  agent_panel.rs.rej  agent_panel_tab.rs  agent_ui.rs  text_thread_editor.rs  text_thread_history.rs  ui.rs
crates/assistant_text_thread/src/: text_thread.rs
crates/audio/: Cargo.toml
crates/audio/src/: audio.rs  audio_settings.rs
crates/breadcrumbs/src/: breadcrumbs.rs
crates/call/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/clipboard_history/: Cargo.toml
crates/clipboard_history/src/: clipboard_history.rs
crates/collab/: Cargo.toml
crates/collab_ui/: Cargo.toml
crates/command_palette/: Cargo.toml
crates/command_palette/src/: command_palette.rs  persistence.rs
crates/edit_prediction/src/: zeta2.rs
crates/editor/: Cargo.toml
crates/editor/src/: actions.rs  create_file_modal.rs  display_map.rs  editor.rs  editor_settings.rs  editor_tests.rs  element.rs  file_explorer_validation.rs  hover_links.rs  hover_popover.rs  inertial_cursor.rs  inlays.rs  items.rs  movement.rs  scroll.rs  split.rs
crates/feature_flags/src/: flags.rs
crates/file_explorer/src/: file_explorer.rs
crates/file_finder/: Cargo.toml
crates/file_finder/src/: file_finder.rs  file_finder_tests.rs
crates/file_path_picker/: Cargo.toml
crates/file_path_picker/src/: file_path_picker.rs
crates/fs/src/: fake_git_repo.rs
crates/fuzzy/: Cargo.toml
crates/fuzzy/src/: fuzzy.rs  matcher.rs  paths.rs  strings.rs
crates/git/src/: git.rs  repository.rs
crates/git_ui/src/: blame_ui.rs  branch_diff_picker.rs  commit_diff_picker.rs  commit_modal.rs  git_panel.rs  git_ui.rs  project_diff.rs
crates/go_to_line/src/: cursor_position.rs
crates/gpui/src/: app.rs
crates/icons/src/: icons.rs
crates/image_viewer/src/: image_viewer.rs
crates/jump/: Cargo.toml  README.md
crates/jump/src/: jump.rs
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs  provider.rs  settings.rs
crates/language_tools/src/: key_context_view.rs
crates/livekit_client/: Cargo.toml
crates/livekit_client/src/: lib.rs  mock_client.rs  shared_types.rs  test.rs
crates/livekit_client/src/mock_client/: participant.rs  publication.rs  track.rs
crates/markdown_preview/src/: markdown_preview.rs  markdown_preview_view.rs
crates/multi_buffer/src/: multi_buffer.rs
crates/outline/src/: outline.rs
crates/outline_panel/src/: outline_panel.rs
crates/picker/src/: picker.rs
crates/platform_title_bar/src/: system_window_tabs.rs
crates/project/src/: git_store.rs  lsp_store.rs  project.rs  project_settings.rs
crates/project_lsp_treesitter_symbol_search/: Cargo.toml
crates/project_lsp_treesitter_symbol_search/src/: project_lsp_treesitter_symbol_search.rs  providers.rs  symbols.rs
crates/project_panel/src/: project_panel.rs  project_panel_settings.rs
crates/quick_search/src/: quick_search_preview.rs
crates/qwen/: Cargo.toml
crates/qwen/src/: qwen.rs
crates/recent_files/: Cargo.toml
crates/recent_files/src/: lib.rs
crates/recent_projects/src/: recent_projects.rs
crates/repl/: Cargo.toml
crates/reqwest_client/src/: reqwest_client.rs
crates/search/: Cargo.toml
crates/search/src/: buffer_search.rs  buffer_search_modal.rs  clipboard_history_modal.rs  emoji_picker_modal.rs  emoji_picker_settings.rs  project_search.rs  search.rs  search_bar.rs
crates/settings/src/: keymap_file.rs  settings_content.rs  vscode_import.rs
crates/settings_content/src/: editor.rs  project.rs  settings_content.rs  workspace.rs
crates/settings_ui/src/: page_data.rs
crates/snippet_provider/: Cargo.toml
crates/snippet_provider/src/: lib.rs
crates/snippets_ui/: Cargo.toml
crates/snippets_ui/src/: snippets_ui.rs
crates/tab_switcher/src/: tab_switcher.rs
crates/terminal/src/: terminal.rs
crates/terminal_view/src/: terminal_panel.rs  terminal_view.rs
crates/text/src/: text.rs
crates/theme/src/: default_colors.rs  fallback_themes.rs  schema.rs
crates/title_bar/src/: system_window_tabs.rs
crates/zed/: Cargo.toml
dima/: 2025-02-05 AI fix diff.md  Info on patching in multiple agent dock tabs.md  MULTIPLE-AGENT-TABS.md
docs/src/: configuring-zed.md
script/: bundle-mac  bundle-mac-without-licenses
script/licenses/: zed-licenses.toml
tooling/workspace-hack/: Cargo.toml
(+54 files in other folders)
