[package]
name = "audio"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/audio.rs"
doctest = false

[features]
default = []
webrtc = ["dep:libwebrtc"]

[dependencies]
anyhow.workspace = true
async-tar.workspace = true
collections.workspace = true
crossbeam.workspace = true
gpui.workspace = true
denoise = { path = "../denoise" }
log.workspace = true
parking_lot.workspace = true
rodio.workspace = true
serde.workspace = true
settings.workspace = true
smol.workspace = true
thiserror.workspace = true
util.workspace = true

# WebRTC dependency for echo cancellation - only included when webrtc feature is enabled
# and not on unsupported platforms
libwebrtc = { rev = "5f04705ac3f356350ae31534ffbc476abc9ea83d", git = "https://github.com/zed-industries/livekit-rust-sdks", optional = true }
