[package]
name = "livekit_client"
version = "0.1.0"
edition.workspace = true
description = "Logic for using LiveKit with GPUI"
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[[example]]
name = "test_app"

[features]
default = []
test-support = ["collections/test-support", "gpui/test-support"]
webrtc = ["dep:libwebrtc", "dep:livekit", "dep:livekit_api", "audio/webrtc"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
audio.workspace = true
collections.workspace = true
cpal.workspace = true
futures.workspace = true
gpui = { workspace = true, features = ["screen-capture", "x11", "wayland", "windows-manifest"] }
gpui_tokio.workspace = true
http_client_tls.workspace = true
image.workspace = true
livekit_api = { workspace = true, optional = true }
log.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
postage.workspace = true
rodio.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
settings.workspace = true
smallvec.workspace = true
tokio-tungstenite.workspace = true
ui.workspace = true
util.workspace = true

# WebRTC dependencies are only included when the webrtc feature is enabled
# and not on unsupported platforms
libwebrtc = { rev = "5f04705ac3f356350ae31534ffbc476abc9ea83d", git = "https://github.com/zed-industries/livekit-rust-sdks", optional = true }
livekit = { rev = "5f04705ac3f356350ae31534ffbc476abc9ea83d", git = "https://github.com/zed-industries/livekit-rust-sdks", features = [
    "__rustls-tls"
], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows"))'.dependencies]
scap.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-video.workspace = true
coreaudio-rs = "0.12.1"
objc.workspace = true

[dev-dependencies]
collections = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
sha2.workspace = true
simplelog.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_json"]
